* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jun 10 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.5.0
- Changed
  - Default to `systemd` for scheduling
  - Use `--check` instead of `-C` by default to match what most scanners expect
  - Randomize the minute field so that I/O load is reduced on hosting platforms
- Added
  - Puppet 7 support
  - Allow users to choose between the following options:
    - `systemd` => Default - Use systemd timers
    - `root`    => Legacy - Update root's crontab
    - `etc`     => Scanner Compat - Update /etc/crontab using Augeas
  - When one method is chosen, the others will be disabled
- Removed
  - Puppet 5 support

* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.3
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.3
- Removed EL6 support

* Wed Apr 29 2020 Trevor Vaughan <tvaughan@onyxpoint.com> 6.4.2-0
- Update the EL8 ciphers to be safe on FIPS systems by default
  - Do not use the built-in aliases
- Remove overrides for aide::aliases on EL8 since it works properly in FIPS mode

* Wed Feb 12 2020 Alexander Fisher <alex@linfratech.co.uk> 6.4.1-0
- Fix badge URLs in README

* Thu Jan 23 2020 Alexander Fisher <alex@linfratech.co.uk> 6.4.0-0
- Automatically add `@@include` lines to aide.conf
  Previously, when declaring `aide::rule` resources, it was also
  necessary to add the rule name to the `$aide::rules` array.
  By switching to using `concat` this is no longer necessary. Instead the
  `rules` parameter is repurposed to accept a hash of `aide::rule`
  resources.

* Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.0-0
- Add EL8 support
- Move the default rules to data in modules
- Make simp-logrotate, simp-syslog, and simp-auditd optional dependencies
